// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalButton renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <ExponentLinearGradient
    colors={
      Array [
        4279286482,
        4280914167,
      ]
    }
    endPoint={
      Array [
        0.65,
        1,
      ]
    }
    startPoint={
      Array [
        0.55,
        0,
      ]
    }
    style={
      Object {
        "borderRadius": 20,
        "elevation": 15,
        "flexDirection": "row",
        "height": 120,
        "justifyContent": "space-evenly",
        "marginTop": 20,
        "padding": 10,
        "width": 400,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontFamily": "montserrat-extra-bold",
          "fontSize": 21,
          "marginTop": 10,
          "textAlign": "left",
        }
      }
    />
    <Image
      source={1}
      style={
        Object {
          "height": 100,
          "width": 100,
        }
      }
    />
  </ExponentLinearGradient>
</View>
`;

exports[`GlobalButton renders correctly 2`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <ExponentLinearGradient
    colors={
      Array [
        4294954035,
        4294089034,
      ]
    }
    endPoint={
      Array [
        0.65,
        1,
      ]
    }
    startPoint={
      Array [
        0.55,
        0,
      ]
    }
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 20,
        "elevation": 15,
        "height": 80,
        "justifyContent": "center",
        "marginTop": 20,
        "width": 190,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#3f2606",
          "fontFamily": "montserrat-extra-bold",
          "fontSize": 20,
          "textAlign": "left",
        }
      }
    />
  </ExponentLinearGradient>
</View>
`;

exports[`MidBlueButton renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <ExponentLinearGradient
    colors={
      Array [
        4279286482,
        4278481116,
      ]
    }
    endPoint={
      Array [
        0.65,
        1,
      ]
    }
    startPoint={
      Array [
        0.55,
        0,
      ]
    }
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 20,
        "elevation": 15,
        "height": 80,
        "justifyContent": "center",
        "marginTop": 20,
        "width": 190,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontFamily": "montserrat-extra-bold",
          "fontSize": 20,
          "textAlign": "left",
        }
      }
    />
  </ExponentLinearGradient>
</View>
`;
